# SAGE

./: .env.example  .gitattributes  .gitignore  .mailmap  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE  Makefile  README.md  SAGE_Framework_Whitepaper.txt  SAGE_Research_Paper.txt  SECURITY.md  alembic.ini  docker-compose.n8n.yml  docker-compose.yml  doctor  launch.sh  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt  ruff.toml  sage-launcher.vbs  sage.bat  start.bat  start.sh
.claude/: SOUL.md  mcp.json  settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
a11y/: audit-report.json  design-tokens.json
api/: mqtt_schema.md  ng911_webhook.md  openapi.yaml
app/: package.json
backend/: Dockerfile  __init__.py  alembic.ini  docker-compose.staging.yml  docker-compose.yml  pytest.ini  requirements.txt  test_alert_pipeline.py
config/: config.yaml  dev_users.yaml  iterative_refinement_route_planning.env  iterative_refinement_route_planning.toml  iterative_refinement_route_planning.yaml  iterative_refinement_route_planning_schema.json  logging_config.py  mcp_docker.yaml  model_registry.py  models.yaml  react_pattern.env  react_pattern.yaml  react_pattern_schema.json  react_route_planning.env  react_route_planning.yaml  react_route_planning_pipeline.env  react_route_planning_pipeline.toml  react_route_planning_pipeline.yaml  react_route_planning_pipeline_schema.json  react_route_planning_schema.json  react_system_prompt.yaml  react_tools.json  settings.py
data_pipeline/: etl_pipeline.py  models.sql  pipeline_config.yaml  requirements.txt  run_tests.py  test_etl_pipeline.py  ugc_ingestion.py  ugc_pipeline_config.yaml  ugc_schema.sql  validators.py  voice_pipeline.py  voice_pipeline_config.yaml  voice_schema.sql
db/: connection.py
docs/: ADDING_A_PROJECT.md  API_REFERENCE.md  AUDIT_2026-07-13.md  Architecture_Study.md  EVALUATOR_OPTIMIZER.md  FRAMEWORK_COMPARISON.md  FRAMEWORK_COMPARISON_REGULATED.md  FRAMEWORK_INTEGRATION_STRATEGY.md  GAPS_2026-07-14.md  GAPS_DEEP_2026-07-14.md  GYM_BENCHMARK.md  GYM_BENCHMARK_COMPANY.md  INTEGRATIONS.md  LOOP_DEMO_2026-07-14.md  MCP_SERVERS.md  PRIVACY.md  REGULATORY_COMPLIANCE_GUIDE.md  SAGE_Demo_Slides_v2.md  SAGE_GEMINI_OBSERVATIONS.md  SAGE_IMPROVEMENT_QUEUE.md  SAGE_ONE_PAGER.md  SAGE_Pipeline_Architecture.md  SAGE_Research_Report_Funding.md  SETUP.md  STATUS_2026-07-14.md  SageAI_Architecture_DeepDive.pptx  SageAI_Business_Case.pptx  SageAI_Business_Case_Summary.md  SageAI_Investor_Pitch.pptx  SageAI_Tech_Pitch.pptx  TESTING.md  USER_GUIDE.md  add_architecture_slides.py  erd.md  generate_presentations.py  hw-agent-design-final.md  hw-agent-loop-context.md  linkedin_article.md  mechanical-engineer-design-final.md  update_ppts.py  (+3 more)
experiments/: 100_builds_report.md  10_domain_experiments.md  10_domain_experiments_table.md  FDA_CDS_Gap_Analysis.md  run_100_builds.py
fastlane/: Fastfile  Gymfile  Matchfile
firmware/: CMakeLists.txt  platformio.ini  toolchain-arm-gcc.cmake
firmware/docs/: IEC62304_classification.md  SOUP_list.md
firmware/scripts/: post_build.py
firmware/src/: blinky_hello.c  fall_detection.c  fall_detection.h  ota_update.c  ota_update.h  watchdog.c  watchdog.h
firmware/tests/: bsp_stub.c  test_fall_detection.c
firmware/tests/unit/: test_fall_detection.c
firmware/tests/unit/include/: ble_gatt.h  fall_detection.h  gps_parser.h  power_management.h  sos_button.h
firmware/tests/unit/src/: ble_gatt.c  fall_detection.c  gps_parser.c  power_management.c  sos_button.c
hardware/firmware/build_9f301b21/: CMakeLists.txt  overlay-hil.conf
hardware/firmware/build_9f301b21/include/: app_events.h  audit_log.h  battery_mgmt.h  ble_gatt.h  fall_detection.h  gps_module.h  iec62304_docs.h  lte_module.h  ota_update.h
hardware/firmware/build_9f301b21/src/: fall_detection.c  hil_test_interface.c
hardware/firmware/build_9f301b21/tests/: conftest.py  hil_controller.py
hardware/firmware/build_9f301b21/tests/system/helpers/: __init__.py  mqtt_monitor.py  psapop_mock.py
hardware/hil/: CMakeLists.txt  hil_robot_library.py  hil_test_harness.py  hil_test_specs.robot  sensor_hal.c  sensor_hal.h  test_sensor_unit.c
hardware/hil/include/: bms_fault_injection.h  bms_hal.h  bms_types.h  collision_warning_hal.h  hil_config.h  hil_sensor_data_validation.h  hil_vehicle_config.h
hardware/hil/src/: hil_collision_warning_tests.c  hil_fault_injection.c  hil_intersection_scenario.c  hil_sensor_data_validation.c  hil_sensor_tests.c  hil_test_runner.c  hil_timing_tests.c
hardware/hil/tests/: bms_core.py  hil_collision_warning_harness.py  hil_harness.py  hil_sensor_data_validation_harness.py  intersection_scenario_runner.py  openocd_gdb_interface.py  test_bms_core.py
hardware/hil/tests/robot/: hil_acceptance.robot  intersection_collision_warning.robot
ios/: ExportOptions.plist
ml_experiments/: _smoke_test.py  requirements.txt  requirements_feature_pipeline.txt  stratified_kfold.py  train.py  train_feature_pipeline.py
mobile/: package.json
models/: model_card.md
sage-desktop/: .gitignore  .stryker.conf.json  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
sage-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
sage-desktop/src-tauri/capabilities/: default.json
sage-desktop/src-tauri/src/: errors.rs  lib.rs  main.rs  rpc.rs  sidecar.rs  update_status.rs
sage-desktop/src-tauri/src/commands/: activity.rs  agentrun.rs  agents.rs  analyze.rs  approvals.rs  audit.rs  backlog.rs  builds.rs  collective.rs  compliance.rs  constitution.rs  costs.rs  eval.rs  evolution.rs  goals.rs  hil.rs  jobs.rs  knowledge.rs  knowledgesync.rs  llm.rs  logs.rs  mod.rs  monitor.rs  onboarding.rs  operator.rs  org.rs  queue.rs  queuedb.rs  regulatory.rs  skills.rs  solutions.rs  status.rs  switch.rs  telemetry.rs  updates.rs  workflow.rs  yaml_edit.rs
sage-vscode/: package-lock.json  package.json  sage-framework-0.2.0.vsix
(+2134 files in other folders)
