[package]
name = "sage-desktop"
version = "0.1.0"
description = "SAGE Framework desktop app — Tauri shell over a Python sidecar."
authors = ["SAGE Team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "sage_desktop_lib"
# rlib is enough for desktop-only builds; staticlib/cdylib are only needed
# for mobile bindings (not in Phase 1 scope). Dropping them also lets us
# run `cargo test` cleanly on Windows (no WebView2Loader DLL entry-point issue).
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[features]
# "desktop" pulls in Tauri. `cargo test --no-default-features` skips it
# so unit tests for pure-Rust modules (errors, rpc, sidecar) run on
# Windows without needing WebView2Loader.dll to be findable at startup.
default = ["desktop"]
desktop = ["dep:tauri", "dep:tauri-plugin-shell", "dep:tauri-plugin-updater"]
custom-protocol = ["tauri/custom-protocol"]
